# toolchat

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
docs/: benchmark.md  vcpkg-llama-cpp-b9871.md
include/: agent.h  catalog.h  download.h  tools.h  tui.h
ports/llama-cpp/: portfile.cmake  vcpkg.json
scripts/: benchmark_toolcalls.py  download_model.py  models.json
src/: agent.cpp  catalog.cpp  download.cpp  main.cpp  tools.cpp  tui.cpp
